Add backend API + swagger docs
