# cmd/poolservice/main.go
@@ -8,15 +8,31 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// @title           Pool service
+// @version         1.0 d
+// @description     A tcp homework backend server
+
+// @contact.name   Khoi Nguyen
+// @contact.email  khoindq@gmail.com
+
+// @host      localhost:8080
+// @BasePath  /api/v1
+
 func main() {
 	r := gin.Default()
 	docs.SwaggerInfo.BasePath = "/api/v1"
+	c := poolgin.NewPoolController()
 
 	v1 := r.Group("/api/v1")
 	{
 		pool := v1.Group("/pool")
 		{
-			pool.POST("/insert", poolgin.InsertAppendPoolHandler())
+
+			pool.POST("/insertorappend", c.InsertOrAppendPoolHandler())
+			quantile := pool.Group("/quantile")
+			{
+				quantile.POST("/get", c.GetQuantileHandler())
+			}
 		}
 	}
 
