# docs/poolservice/swagger.json
@@ -1,13 +1,20 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "A tcp homework backend server",
+        "title": "Pool service",
+        "contact": {
+            "name": "Khoi Nguyen",
+            "email": "khoindq@gmail.com"
+        },
+        "version": "1.0 d"
     },
+    "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/example/helloworld": {
-            "get": {
-                "description": "do ping",
+        "/pool/insertorappend": {
+            "post": {
+                "description": "Inserts or appends a pool to the database",
                 "consumes": [
                     "application/json"
                 ],
@@ -15,16 +22,104 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Pool"
                 ],
-                "summary": "ping example",
+                "summary": "Insert or append a pool",
+                "parameters": [
+                    {
+                        "description": "Pool object",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/poolmodel.Pool"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/common.successRes"
                         }
                     }
+                }
+            }
+        },
+        "/pool/quantile/get": {
+            "post": {
+                "description": "GetQuantile of a pool",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Pool"
+                ],
+                "summary": "GetQuantile of a pool",
+                "parameters": [
+                    {
+                        "description": "PoolQuantileGet object",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/poolmodel.PoolQuantileGet"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.successRes"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "common.successRes": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "filter": {
+                    "description": "for future  using"
+                },
+                "paging": {
+                    "description": "for future  using"
+                }
+            }
+        },
+        "poolmodel.Pool": {
+            "type": "object",
+            "required": [
+                "poolId",
+                "poolValues"
+            ],
+            "properties": {
+                "poolId": {
+                    "type": "integer"
+                },
+                "poolValues": {
+                    "type": "array",
+                    "items": {
+                        "type": "number"
+                    }
+                }
+            }
+        },
+        "poolmodel.PoolQuantileGet": {
+            "type": "object",
+            "properties": {
+                "percentile": {
+                    "type": "number"
+                },
+                "poolId": {
+                    "type": "integer"
                 }
             }
         }
